# nmea-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  SENTENCES.md
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
src/: error.rs  frame.rs  lib.rs
src/ais/: armor.rs  fragments.rs  mod.rs
src/ais/messages/: aid_to_navigation.rs  base_station.rs  binary_ack.rs  binary_addressed.rs  binary_broadcast.rs  common.rs  interrogation.rs  long_range.rs  mod.rs  position_a.rs  position_b.rs  position_b_ext.rs  safety_addressed.rs  safety_broadcast.rs  sar_aircraft.rs  static_b.rs  utc_date_response.rs  utils.rs  voyage_a.rs
src/nmea/: field.rs  mod.rs
src/nmea/sentences/: aam.rs  apb.rs  bod.rs  bwc.rs  bwr.rs  bww.rs  dbk.rs  dbs.rs  dbt.rs  dpt.rs  dtm.rs  gbs.rs  gga.rs  gll.rs  gns.rs  gsa.rs  gst.rs  gsv.rs  hdg.rs  hdm.rs  hdt.rs  mda.rs  mod.rs  mtw.rs  mwd.rs  mwv.rs  pashr.rs  pgrme.rs  pskpdpt.rs  rmb.rs  rmc.rs  rot.rs  rpm.rs  rsa.rs  rsd.rs  rte.rs  ths.rs  txt.rs  vbw.rs  vdr.rs  (+8 more)
tests/: ais.rs  ais_decode.rs  frame.rs  nmea.rs  nmea_dbk.rs  nmea_dbs.rs  nmea_dbt.rs  nmea_dpt.rs  nmea_encode.rs  nmea_gbs.rs  nmea_gga.rs  nmea_gll.rs  nmea_gns.rs  nmea_gst.rs  nmea_hdg.rs  nmea_hdm.rs  nmea_hdt.rs  nmea_mwd.rs  nmea_mwv.rs  nmea_parse.rs  nmea_rmb.rs  nmea_rmc.rs  nmea_rot.rs  nmea_rsa.rs  nmea_vbw.rs  nmea_vhw.rs  nmea_vtg.rs  nmea_xdr.rs  nmea_zda.rs
tests/ais/: parser.rs  type1.rs  type11.rs  type12.rs  type13.rs  type15.rs  type18.rs  type19.rs  type21.rs  type24.rs  type27.rs  type4.rs  type5.rs  type6.rs  type7.rs  type8.rs  type9.rs
tests/nmea/: aam.rs  apb.rs  bod.rs  bwc.rs  bwr.rs  bww.rs  dbk.rs  dpt.rs  dtm.rs  gbs.rs  gga.rs  gll.rs  gns.rs  gsa.rs  gst.rs  gsv.rs  hdg.rs  hdm.rs  mda.rs  mtw.rs  mwv.rs  pashr.rs  pgrme.rs  pskpdpt.rs  rmb.rs  rpm.rs  rsd.rs  rte.rs  ths.rs  txt.rs  unknown.rs  vdr.rs  vlw.rs  vwr.rs  wpl.rs  xte.rs  zda.rs
