[package]
name = "nmea-kit"
version = "0.2.3"
edition = "2024"
rust-version = "1.85.0"
description = "Bidirectional NMEA 0183 parser and encoder with AIS decoding"
license = "MIT OR Apache-2.0"
authors = ["Antoine MOUTIERS"]
readme = "README.md"
repository = "https://github.com/amoutiers/nmea-kit"
homepage = "https://github.com/amoutiers/nmea-kit"
documentation = "https://docs.rs/nmea-kit"
keywords = ["nmea", "ais", "gps", "marine", "navigation"]
categories = ["parser-implementations", "encoding", "science::geo"]
exclude = ["/tests/"]

[dependencies]

[features]
default = ["nmea", "ais"]

# Semantic groups
positioning = ["gga", "gll", "rmc", "gns"]
speed       = ["vtg", "vhw", "vbw", "rmc"]
heading     = ["hdg", "hdm", "hdt"]
wind        = ["mwd", "mwv"]
depth       = ["dbt", "dbs", "dbk", "dpt"]

# Umbrella — all sentence types
nmea = [
    "positioning", "speed", "heading", "wind", "depth",
    "gbs", "gst", "mtw", "rmb", "rot", "rsa", "vlw", "xdr", "zda",
]
ais = []

# Individual NMEA sentence types
dbk = []
dbs = []
dbt = []
dpt = []
gbs = []
gga = []
gll = []
gns = []
gst = []
hdg = []
hdm = []
hdt = []
mtw = []
mwd = []
mwv = []
rmb = []
rmc = []
rot = []
rsa = []
vhw = []
vlw = []
vbw = []
vtg = []
xdr = []
zda = []

[lints.clippy]
unwrap_used = "warn"
cognitive_complexity = "warn"
