[package]
name = "nmea-kit"
version = "0.5.2"
edition = "2024"
rust-version = "1.85.0"
description = "Bidirectional NMEA 0183 parser and encoder with AIS decoding"
license = "MIT OR Apache-2.0"
authors = ["Antoine MOUTIERS"]
readme = "README.md"
repository = "https://github.com/amoutiers/nmea-kit"
homepage = "https://github.com/amoutiers/nmea-kit"
documentation = "https://docs.rs/nmea-kit"
keywords = ["nmea", "ais", "gps", "marine", "navigation"]
categories = ["parser-implementations", "encoding", "science::geo"]
exclude = ["/tests/"]

[dependencies]

[features]
default = ["nmea", "ais"]

# Semantic groups
positioning = ["gga", "gll", "rmc", "gns"]
speed       = ["vtg", "vhw", "vbw", "rmc"]
heading     = ["hdg", "hdm", "hdt", "ths"]
wind        = ["mwd", "mwv"]
depth       = ["dbt", "dbs", "dbk", "dpt"]

# Umbrella — all sentence types
nmea = [
    "positioning", "speed", "heading", "wind", "depth",
    "apb", "gbs", "gsa", "gsv", "gst", "mtw", "pashr", "pgrme", "pskpdpt", "rmb", "rot", "rsa", "txt", "vlw", "xdr", "xte", "zda",
]
ais = []

# Individual NMEA sentence types
apb = []
dbk = []
dbs = []
dbt = []
dpt = []
gbs = []
gga = []
gll = []
gns = []
gsa = []
gsv = []
gst = []
hdg = []
hdm = []
hdt = []
mtw = []
mwd = []
mwv = []
pashr = []
pgrme = []
pskpdpt = []
rmb = []
rmc = []
rot = []
rsa = []
ths = []
txt = []
vhw = []
vlw = []
vbw = []
vtg = []
xdr = []
xte = []
zda = []

[lints.clippy]
unwrap_used = "warn"
cognitive_complexity = "warn"
